# wgpu_compute_framework

./: Cargo.toml  README.md
benches/: compute_bench.rs
examples/: 01_double.rs  02_vector_add_benchmark.rs  03_matrix_multiplication.rs  04_1d_stencil.rs  05_prefix_sum_block_scan.rs  06_2d_convolution.rs  07_transpose_tiled.rs  08_vadf.rs  README.md  UNKNOWN_UNKNOWNS.md  WGSL_101.md  WORKGROUP_MAPPING_GUIDE.md  vadf_roofline.rs  vector_add.rs  worksheet.md
src/: buffer.rs  compute.rs  context.rs  lib.rs  vadf_stream.rs
